--- a/short-url/src/main/resources/templates/index.html
+++ b/short-url/src/main/resources/templates/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+xmlns:th="http://www.thymeleaf.org"
+xmlns:layout="http://www.ultrag.net.nz/thymeleaf/layout"
+layout:decorate="~{layout}"
+>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>
-        url shortner with count : <h1 id="count">0</h1>
-    </h1>  
+    <div layout:fragment="content">
+        <div class="jumboter bg">
+
+        </div>
+    </div>
 </body>
-<script>
-    let c = 0;
-    const e = document.getElementById("count");
-    e.addEventListener("click",()=>{
-        e.innerHTML = c + 1;
-        c += 1;
-    });
-</script>
 </html>
